service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-app-service
  labels:
    app: python-app
    owner: venkat
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30007
  selector:
    app: python-app
